--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gamics - Create Manage Matches</title>
+  <title>Studio Albalad</title>
 
   <!-- 
     - favicon
@@ -86,7 +86,7 @@
     <div class="header-bottom skewBg" data-header>
       <div class="container">
 
-        <a href="#" class="logo">Gamics</a>
+        <a href="#" class="logo">Studio Albalad</a>
 
         <nav class="navbar" data-navbar>
           <ul class="navbar-list">
@@ -968,7 +968,7 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">Gamics</a>
+          <a href="#" class="logo">Studio Albalad</a>
 
           <p class="footer-text">
             Gamics marketplace the relase etras thats sheets continig passag.
@@ -1122,7 +1122,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Gamics. All Right Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          &copy; 2024 Studio Albalad All Right Reserved by <a href="#" class="copyright-link">codewithsadee</a>
         </p>
 
         <img src="./assets/images/footer-bottom-img.png" width="340" height="21" loading="lazy" alt=""
