--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <header class="header">
 
-    <div class="header-top">
+<!--     <div class="header-top">
       <div class="container">
 
         <div class="countdown-text">
@@ -81,7 +81,7 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <div class="header-bottom skewBg" data-header>
       <div class="container">
