--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
   <header class="header">
 
-<!--     <div class="header-top">
+    <div class="header-top">
       <div class="container">
 
-        <div class="countdown-text">
+<!--         <div class="countdown-text">
           Exclusive Black Friday ! Offer <span class="span skewBg">10</span> Days
-        </div>
+        </div> -->
 
         <div class="social-wrapper">
 
@@ -81,7 +81,7 @@
         </div>
 
       </div>
-    </div> -->
+    </div>
 
     <div class="header-bottom skewBg" data-header>
       <div class="container">
