--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
 
           </div>
 
-          <figure class="hero-banner img-holder" style="--width: 700; --height: 700;">
+<!--           <figure class="hero-banner img-holder" style="--width: 700; --height: 700;">
             <img src="./assets/images/hero-banner.png" width="700" height="700" alt="hero banner" class="w-100">
-          </figure>
+          </figure> -->
 
         </div>
       </section>
