--- a/index.html
+++ b/index.html
@@ -181,16 +181,16 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle">World Gaming</p>
+            <p class="hero-subtitle">Creating a New Era of Gaming in Saudi Arabia!</p>
 
             <h1 class="h1 hero-title">
-              Create <span class="span">Manage</span> Matches
+              Create <span class="span">Enspire</span> Play
             </h1>
 
-            <p class="hero-text">
+<!--             <p class="hero-text">
               Find technology or people for digital projects in public sector and Find an individual specialist develope
               researcher.
-            </p>
+            </p> -->
 
             <button class="btn skewBg">Read More</button>
 
