--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <div class="container">
 
             <h2 class="h2 section-title">
-              Watch Live <span class="span">Match</span>
+              Watch Live E-sports <span class="span">Matchs</span>
             </h2>
 
             <figure class="live-match-banner img-holder" style="--width: 800; --height: 470;">
@@ -374,10 +374,10 @@
 
             <div class="live-match-player">
 
-              <figure class="player player-1 img-holder" style="--width: 406; --height: 277;">
+<!--               <figure class="player player-1 img-holder" style="--width: 406; --height: 277;">
                 <img src="./assets/images/live-match-player-1.png" width="406" height="277" loading="lazy"
                   alt="tokyo eagle" class="w-100">
-              </figure>
+              </figure> -->
 
               <div class="live-match-detail">
 
@@ -387,10 +387,10 @@
 
               </div>
 
-              <figure class="player player-2 img-holder" style="--width: 400; --height: 305;">
+<!--               <figure class="player player-2 img-holder" style="--width: 400; --height: 305;">
                 <img src="./assets/images/live-match-player-2.png" width="400" height="305" loading="lazy"
                   alt="new york hunter7" class="w-100">
-              </figure>
+              </figure> -->
 
             </div>
 
