--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle">Creating a New Era of Gaming in Saudi Arabia!</p>
+            <p class="hero-subtitle">Creating a New Era of Gaming in Saudi Arabia</p>
 
             <h1 class="h1 hero-title">
               Create <span class="span">Enspire</span> Play
@@ -261,7 +261,7 @@
             <p class="section-subtitle">Latest Releases</p>
 
             <h2 class="h2 section-title">
-              Create & <span class="span">Manage</span>
+              Download & <span class="span">Play</span>
             </h2>
 
             <ul class="has-scrollbar">
@@ -279,11 +279,11 @@
                     <a href="#" class="card-badge skewBg">Zombie</a>
 
                     <h3 class="h3">
-                      <a href="#" class="card-title">White Walker <span class="span">Daily</span></a>
+                      <a href="#" class="card-title">White<span class="span">Walker</span></a>
                     </h3>
 
                     <p class="card-price">
-                      Entry Fee : <span class="span">Free</span>
+                      <span class="span">Free</span>
                     </p>
 
                   </div>
@@ -308,7 +308,7 @@
                     </h3>
 
                     <p class="card-price">
-                      Entry Fee : <span class="span">$25.00</span>
+                      <span class="span">25 SR</span>
                     </p>
 
                   </div>
@@ -329,11 +329,11 @@
                     <a href="#" class="card-badge skewBg">Action</a>
 
                     <h3 class="h3">
-                      <a href="#" class="card-title">Cyberpunk <span class="span">Daily</span></a>
+                      <a href="#" class="card-title">Jeddah <span class="span">Hero</span></a>
                     </h3>
 
                     <p class="card-price">
-                      Entry Fee : <span class="span">$25.00</span>
+                    <span class="span">10 SR</span>
                     </p>
 
                   </div>
@@ -428,14 +428,14 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title" tabindex="-1">
-                      Just for <span class="span">Gamers</span>
+                      Boulevard <span class="span">Runner</span>
                     </a>
                   </h3>
 
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
@@ -447,14 +447,14 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title">
-                      Just for <span class="span">Gamers</span>
+                      Drifting Hero <span class="span">بطل الطاره</span>
                     </a>
                   </h3>
 
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
@@ -481,7 +481,7 @@
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
@@ -500,7 +500,7 @@
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
@@ -520,14 +520,14 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title" tabindex="-1">
-                      Egypt Hunting <span class="span">Gamers</span>
+                      Shadows<span class="span">ظلال</span>
                     </a>
                   </h3>
 
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
@@ -566,14 +566,14 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title" tabindex="-1">
-                      Just for <span class="span">Gamers</span>
+                      The War <span class="span">الحرب</span>
                     </a>
                   </h3>
 
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
