--- a/index.html
+++ b/index.html
@@ -618,12 +618,11 @@
         <div class="container">
 
           <h2 class="h2 section-title">
-            Gaming Product <span class="span">Corner</span>
+            Studio Albalad <span class="span">Team</span>
           </h2>
 
           <p class="section-text">
-            Compete with 100 players on a remote island for winner takes showdown known issue where certain skin
-            strategic
+           With a diverse range of expertise and a collaborative spirit, we strive to push the boundaries of game development and create memorable, immersive worlds for our players.
           </p>
 
           <ul class="has-scrollbar">
@@ -632,25 +631,25 @@
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
-                  <img src="./assets/images/shop-img-1.jpg" width="300" height="260" loading="lazy"
-                    alt="Women Black T-Shirt" class="img-cover">
+<!--                   <img src="./assets/images/shop-img-1.jpg" width="300" height="260" loading="lazy"
+                    alt="Women Black T-Shirt" class="img-cover"> -->
                 </figure>
 
                 <div class="card-content">
 
-                  <a href="#" class="card-badge skewBg">t-shirt</a>
+                  <a href="#" class="card-badge skewBg"></a>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Women Black T-Shirt</a>
+                    <a href="#" class="card-title">Dr. Sultan A. Alharthi</a>
                   </h3>
 
-                  <div class="card-wrapper">
+<!--                   <div class="card-wrapper">
                     <p class="card-price">$29.00</p>
 
                     <button class="card-btn">
                       <ion-icon name="basket"></ion-icon>
                     </button>
-                  </div>
+                  </div> -->
 
                 </div>
 
@@ -661,37 +660,37 @@
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
-                  <img src="./assets/images/shop-img-2.jpg" width="300" height="260" loading="lazy"
-                    alt="Gears 5 Xbox Controller" class="img-cover">
+<!--                   <img src="./assets/images/shop-img-2.jpg" width="300" height="260" loading="lazy"
+                    alt="Gears 5 Xbox Controller" class="img-cover"> -->
                 </figure>
 
                 <div class="card-content">
 
-                  <a href="#" class="card-badge skewBg">x-box</a>
+                  <a href="#" class="card-badge skewBg"></a>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Gears 5 Xbox Controller</a>
+                    <a href="#" class="card-title">Dr. Abdullah Suruji</a>
                   </h3>
 
-                  <div class="card-wrapper">
+<!--                   <div class="card-wrapper">
                     <p class="card-price">$29.00</p>
 
                     <button class="card-btn">
                       <ion-icon name="basket"></ion-icon>
                     </button>
-                  </div>
+                  </div> -->
 
                 </div>
 
               </div>
             </li>
 
-            <li class="scrollbar-item">
+<!--             <li class="scrollbar-item">
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
-                  <img src="./assets/images/shop-img-3.jpg" width="300" height="260" loading="lazy"
-                    alt="GeForce RTX 2070" class="img-cover">
+<!--                   <img src="./assets/images/shop-img-3.jpg" width="300" height="260" loading="lazy"
+                    alt="GeForce RTX 2070" class="img-cover"> -->
                 </figure>
 
                 <div class="card-content">
@@ -713,9 +712,9 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
-            <li class="scrollbar-item">
+<!--             <li class="scrollbar-item">
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
@@ -742,7 +741,7 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
           </ul>
 
