--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
-<!--                   <img src="./assets/images/shop-img-3.jpg" width="300" height="260" loading="lazy"
-                    alt="GeForce RTX 2070" class="img-cover"> -->
+                  <img src="./assets/images/shop-img-3.jpg" width="300" height="260" loading="lazy"
+                    alt="GeForce RTX 2070" class="img-cover">
                 </figure>
 
                 <div class="card-content">
