--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
           <a href="#" class="logo">Studio Albalad</a>
 
           <p class="footer-text">
-            Gamics marketplace the relase etras thats sheets continig passag.
+            
           </p>
 
           <ul class="contact-list">
@@ -981,7 +981,7 @@
               </div>
 
               <address class="item-text">
-                Address : PO Box W75 Street lan West new queens
+                Address : Jeddah
               </address>
             </li>
 
@@ -990,7 +990,7 @@
                 <ion-icon name="headset"></ion-icon>
               </div>
 
-              <a href="tel:+241245654235" class="item-text">Phone : +24 1245 654 235</a>
+              <a href="tel:+241245654235" class="item-text">Phone : +966569041252</a>
             </li>
 
             <li class="contact-item">
@@ -998,7 +998,7 @@
                 <ion-icon name="mail-open"></ion-icon>
               </div>
 
-              <a href="mailto:info@exemple.com" class="item-text">Email : info@exemple.com</a>
+              <a href="mailto:studioalbalad@gmail.com" class="item-text">Email : studioalbalad@gmail.com</a>
             </li>
 
           </ul>
@@ -1121,7 +1121,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2024 Studio Albalad All Right Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          &copy; 2024 Studio Albalad All Right Reserved by <a href="#" class="copyright-link">Studio Albalad</a>
         </p>
 
         <img src="./assets/images/footer-bottom-img.png" width="340" height="21" loading="lazy" alt=""
