--- a/index.html
+++ b/index.html
@@ -628,6 +628,7 @@
           <ul class="has-scrollbar">
 
             <li class="scrollbar-item">
+              <center>
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
@@ -657,6 +658,7 @@
             </li>
 
             <li class="scrollbar-item">
+              <center>
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
