--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
                 <ion-icon name="headset"></ion-icon>
               </div>
 
-              <a href="tel:+241245654235" class="item-text">Phone : +966569041252</a>
+              <a href="tel:+966569041252" class="item-text">Phone : +966569041252</a>
             </li>
 
             <li class="contact-item">
@@ -1000,7 +1000,7 @@
                 <ion-icon name="mail-open"></ion-icon>
               </div>
 
-              <a href="mailto:studioalbalad@gmail.com" class="item-text">Email : studioalbalad@gmail.com</a>
+              <a href="mailto:studioalbalad@gmail.com" class="item-text">studioalbalad@gmail.com</a>
             </li>
 
           </ul>
@@ -1123,7 +1123,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2024 Studio Albalad All Right Reserved by <a href="#" class="copyright-link">Studio Albalad</a>
+          &copy; 2024 Studio Albalad. All Right Reserved by <a href="#" class="copyright-link">Studio Albalad</a>
         </p>
 
         <img src="./assets/images/footer-bottom-img.png" width="340" height="21" loading="lazy" alt=""
