--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <a href="#" class="card-badge skewBg">Zombie</a>
 
                     <h3 class="h3">
-                      <a href="#" class="card-title">White<span class="span">Walker</span></a>
+                      <a href="#" class="card-title">White<span class="span"> Walker</span></a>
                     </h3>
 
                     <p class="card-price">
@@ -428,7 +428,7 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title" tabindex="-1">
-                      Boulevard <span class="span">Runner</span>
+                      Boulevard <span class="span"> Runner</span>
                     </a>
                   </h3>
 
@@ -447,7 +447,7 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title">
-                      Drifting Hero <span class="span">بطل الطاره</span>
+                      Boulevard <span class="span"> Runner</span>
                     </a>
                   </h3>
 
@@ -474,7 +474,7 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title" tabindex="-1">
-                      Need for <span class="span">Speed</span>
+                      Drifting Hero <span class="span"> بطل الطاره</span>
                     </a>
                   </h3>
 
@@ -493,7 +493,7 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title">
-                      Need for <span class="span">Speed</span>
+                      Drifting Hero <span class="span"> بطل الطاره</span>
                     </a>
                   </h3>
 
@@ -520,7 +520,7 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title" tabindex="-1">
-                      Shadows<span class="span">ظلال</span>
+                      Shadows<span class="span"> ظلال</span>
                     </a>
                   </h3>
 
@@ -539,7 +539,7 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title">
-                      Egypt Hunting <span class="span">Gamers</span>
+                      Shadows <span class="span"> ظلال</span>
                     </a>
                   </h3>
 
@@ -585,7 +585,7 @@
 
                   <h3 class="h3">
                     <a href="#" class="card-title">
-                      Just for <span class="span">Gamers</span>
+                    The War <span class="span">الحرب</span>
                     </a>
                   </h3>
 
