--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           Exclusive Black Friday ! Offer <span class="span skewBg">10</span> Days
         </div> -->
 
-        <div class="social-wrapper">
+<!--         <div class="social-wrapper">
 
           <p class="social-title">Follow us on :</p>
 
@@ -78,7 +78,7 @@
 
           </ul>
 
-        </div>
+        </div> -->
 
       </div>
     </div>
