--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
@@ -592,7 +592,7 @@
                   <span class="card-meta">
                     <ion-icon name="notifications"></ion-icon>
 
-                    <span class="span">Playstation 5, Xbox</span>
+                    <span class="span">PC</span>
                   </span>
 
                 </div>
