--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                 </figure>
 
                 <div class="card-content">
-
+                <center>
                   <a href="#" class="card-badge skewBg"></a>
 
                   <h3 class="h3">
@@ -667,7 +667,7 @@
                 </figure>
 
                 <div class="card-content">
-
+                  <center>
                   <a href="#" class="card-badge skewBg"></a>
 
                   <h3 class="h3">
