--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#shop" class="navbar-link skewBg" data-nav-link>Shop</a>
+              <a href="#shop" class="navbar-link skewBg" data-nav-link>Team</a>
             </li>
 
             <li class="navbar-item">
