--- a/blog.html
+++ b/blog.html
@@ -225,6 +225,93 @@
               </div>
             </li>
 
+                        <li>
+              <div class="blog-card">
+
+                <figure class="card-banner img-holder" style="--width: 400; --height: 290;">
+                  <img src="./assets/images/blog-1.jpg" width="400" height="290" loading="lazy"
+                    alt="Blog Article 1" class="img-cover">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3>
+                    <a href="blog-article-1.html" class="card-title">Blog Article 1</a>
+                  </h3>
+
+                  <p class="card-text">
+                    A brief description or excerpt of Blog Article 1.
+                  </p>
+
+                  <a href="blog-article-1.html" class="card-link">
+                    <span class="span">Read More</span>
+
+                    <ion-icon name="caret-forward"></ion-icon>
+                  </a>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="blog-card">
+
+                <figure class="card-banner img-holder" style="--width: 400; --height: 290;">
+                  <img src="./assets/images/blog-2.jpg" width="400" height="290" loading="lazy"
+                    alt="Blog Article 2" class="img-cover">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3>
+                    <a href="blog-article-2.html" class="card-title">Blog Article 2</a>
+                  </h3>
+
+                  <p class="card-text">
+                    A brief description or excerpt of Blog Article 2.
+                  </p>
+
+                  <a href="blog-article-2.html" class="card-link">
+                    <span class="span">Read More</span>
+
+                    <ion-icon name="caret-forward"></ion-icon>
+                  </a>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="blog-card">
+
+                <figure class="card-banner img-holder" style="--width: 400; --height: 290;">
+                  <img src="./assets/images/blog-3.jpg" width="400" height="290" loading="lazy"
+                    alt="Blog Article 3" class="img-cover">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3>
+                    <a href="blog-article-3.html" class="card-title">Blog Article 3</a>
+                  </h3>
+
+                  <p class="card-text">
+                    A brief description or excerpt of Blog Article 3.
+                  </p>
+
+                  <a href="blog-article-3.html" class="card-link">
+                    <span class="span">Read More</span>
+
+                    <ion-icon name="caret-forward"></ion-icon>
+                  </a>
+
+                </div>
+
+              </div>
+            </li>
+
             <!-- Repeat for more blog articles -->
 
           </ul>
