--- a/blog.html
+++ b/blog.html
@@ -50,19 +50,19 @@
           <ul class="navbar-list">
 
             <li class="navbar-item">
-              <a href="#home" class="navbar-link skewBg" data-nav-link>Home</a>
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Home</a>
             </li>
 
             <li class="navbar-item">
-              <a href="#live" class="navbar-link skewBg" data-nav-link>Live</a>
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Live</a>
             </li>
 
             <li class="navbar-item">
-              <a href="#features" class="navbar-link skewBg" data-nav-link>Features</a>
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Features</a>
             </li>
 
             <li class="navbar-item">
-              <a href="#shop" class="navbar-link skewBg" data-nav-link>Team</a>
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Team</a>
             </li>
 
             <li class="navbar-item">
@@ -70,7 +70,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#" class="navbar-link skewBg" data-nav-link>Contact</a>
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Contact</a>
             </li>
 
           </ul>
