--- a/blog01.html
+++ b/blog01.html
@@ -26,6 +26,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Oxanium:wght@600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+
+  <style>
+    body {
+      color: white;
+      background-color: #000; /* Optional: to make sure the background is dark */
+    }
+  </style>
+  
 </head>
 
 <body id="top">
