--- a/blog01.html
+++ b/blog01.html
@@ -111,7 +111,7 @@
             <img src="https://via.placeholder.com/800x400" width="800" height="400" loading="lazy" alt="Blog Article 1" class="img-cover">
           </figure>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet libero eu neque facilisis, in faucibus quam aliquam. Cras venenatis bibendum enim, nec cursus ante.</p>
+          <p>يعد سوق الألعاب الإلكترونية في المملكة العربية السعودية واحدة من أسرع الأسواق نموًا في العالم، ويقدر البنك السعودي للتنمية الاجتماعية أن قيمة السوق حوالي ٣ مليار ريال سعودي ومن المتوقع ان تصل الى ١٠ مليار ريال بحلول عام ٢٠٣٠ ويعود هذا النمو إلى عدة عوامل، من بينها زيادة عدد اللاعبين في المملكة، توسع البنية التحتية الرقمية، والاهتمام بشكل كبير في تنمية قطاع الترفيه التقني من قبل حكومتنا الرشيدة. كما أن اهتمام الحكومة بتطوير قطاع الألعاب الإلكترونية من خلال وضع استراتيجيات وسياسات داعمة يساهم في دفع عجلة النمو بشكل متسارع ومن المتوقع أن يستمر السوق في جذب الاستثمارات المحلية والأجنبية، مما سيعزز من قيمته وحجمه بشكل كبير.</p>
 
           <figure class="img-holder" style="--width: 600; --height: 300;">
             <img src="https://via.placeholder.com/600x300" width="600" height="300" loading="lazy" alt="Placeholder Image" class="img-cover">
