--- a/blog01.html
+++ b/blog01.html
@@ -32,6 +32,10 @@
       color: white;
       background-color: #000; /* Optional: to make sure the background is dark */
     }
+        .rtl-text {
+      direction: rtl;
+      text-align: right;
+    }
   </style>
   
 </head>
@@ -105,7 +109,7 @@
       <section class="section blog-article" aria-label="blog article">
         <div class="container">
 
-          <h1 class="h1 section-title">Blog Article 1</h1>
+          <h1 class="h1 section-title">‎المملكة تستعد لاستضافة "كأس العالم للرياضات الإلكترونية"</h1>
 
           <figure class="img-holder" style="--width: 800; --height: 400;">
             <img src="https://via.placeholder.com/800x400" width="800" height="400" loading="lazy" alt="Blog Article 1" class="img-cover">
