--- a/blog01.html
+++ b/blog01.html
@@ -112,7 +112,7 @@
           <h1 class="h1 section-title">‎المملكة تستعد لاستضافة "كأس العالم للرياضات الإلكترونية"</h1>
 
           <figure class="img-holder" style="--width: 800; --height: 400;">
-            <img src="https://via.placeholder.com/800x400" width="800" height="400" loading="lazy" alt="Blog Article 1" class="img-cover">
+            <img src="https://cdn4.premiumread.com/?url=https://makkahnewspaper.com/uploads/images/2024/06/27/1734147.jpeg&q=100&f=jpg" width="800" height="400" loading="lazy" alt="Blog Article 1" class="img-cover">
           </figure>
 
           <p>يعد سوق الألعاب الإلكترونية في المملكة العربية السعودية واحدة من أسرع الأسواق نموًا في العالم، ويقدر البنك السعودي للتنمية الاجتماعية أن قيمة السوق حوالي ٣ مليار ريال سعودي ومن المتوقع ان تصل الى ١٠ مليار ريال بحلول عام ٢٠٣٠ ويعود هذا النمو إلى عدة عوامل، من بينها زيادة عدد اللاعبين في المملكة، توسع البنية التحتية الرقمية، والاهتمام بشكل كبير في تنمية قطاع الترفيه التقني من قبل حكومتنا الرشيدة. كما أن اهتمام الحكومة بتطوير قطاع الألعاب الإلكترونية من خلال وضع استراتيجيات وسياسات داعمة يساهم في دفع عجلة النمو بشكل متسارع ومن المتوقع أن يستمر السوق في جذب الاستثمارات المحلية والأجنبية، مما سيعزز من قيمته وحجمه بشكل كبير.</p>
