--- a/blog01.html
+++ b/blog01.html
@@ -31,6 +31,9 @@
     body {
       color: white;
       background-color: #000; /* Optional: to make sure the background is dark */
+            font-family: 'Amiri', serif; /* Use Amiri font */
+      direction: rtl; /* Right-to-left text direction */
+      text-align: right; /* Right text alignment */
     }
         .rtl-text {
       direction: rtl;
