--- a/blog01.html
+++ b/blog01.html
@@ -35,9 +35,9 @@
       direction: rtl; /* Right-to-left text direction */
       text-align: right; /* Right text alignment */
     }
-        .rtl-text {
+/*         .rtl-text {
       direction: rtl;
-      text-align: right;
+      text-align: right; */
     }
   </style>
   
