--- a/blog01.html
+++ b/blog01.html
@@ -23,8 +23,11 @@
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
+<!--   <link
     href="https://fonts.googleapis.com/css2?family=Oxanium:wght@600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet"> -->
+    <link
+    href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap"
     rel="stylesheet">
 
   <style>
@@ -34,6 +37,24 @@
             font-family: 'Amiri', serif; /* Use Amiri font */
       direction: rtl; /* Right-to-left text direction */
       text-align: right; /* Right text alignment */
+    }
+        .slider-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 20px 0;
+    }
+    .slider {
+      width: 100px;
+      margin: 0 10px;
+    }
+        .share-button {
+      background-color: #f1c40f;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      color: black;
+      font-size: 16px;
     }
 /*         .rtl-text {
       direction: rtl;
