--- a/blog01.html
+++ b/blog01.html
@@ -23,9 +23,9 @@
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<!--   <link
+   <link
     href="https://fonts.googleapis.com/css2?family=Oxanium:wght@600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet"> -->
+    rel="stylesheet">
     <link
     href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap"
     rel="stylesheet">
