--- a/blog01.html
+++ b/blog01.html
@@ -23,18 +23,18 @@
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link
-    href="https://fonts.googleapis.com/css2?family=Oxanium:wght@600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-    <link
-    href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Oxanium:wght@600;700;800&display=swap"
     rel="stylesheet">
 
   <style>
     body {
       color: white;
       background-color: #000; /* Optional: to make sure the background is dark */
-            font-family: 'Amiri', serif; /* Use Amiri font */
+      font-family: 'Oxanium', sans-serif; /* Use Oxanium font for English */
+    }
+    .article-content {
+      font-family: 'Amiri', serif; /* Use Amiri font for Arabic */
       direction: rtl; /* Right-to-left text direction */
       text-align: right; /* Right text alignment */
     }
@@ -134,10 +134,22 @@
         <div class="container">
 
           <h1 class="h1 section-title">‎المملكة تستعد لاستضافة "كأس العالم للرياضات الإلكترونية"</h1>
+          <h2 class="h2 section-subtitle" style="color: white;">العنوان الفرعي</h2>
+          <p style="color: white;">الجمعة، 29 يونيو 2024 - الكاتب: استوديو البلد</p>
+
+          
 
           <figure class="img-holder" style="--width: 800; --height: 400;">
             <img src="https://cdn4.premiumread.com/?url=https://makkahnewspaper.com/uploads/images/2024/06/27/1734147.jpeg&q=100&f=jpg" width="800" height="400" loading="lazy" alt="Blog Article 1" class="img-cover">
           </figure>
+
+          <div class="slider-container">
+            <span style="font-size: 20px;">A</span>
+            <input type="range" min="16" max="24" value="16" class="slider" id="textSizeSlider">
+            <span style="font-size: 30px;">A</span>
+          </div>
+
+          <button class="share-button" onclick="copyLink()">شارك</button>
 
           <p>يعد سوق الألعاب الإلكترونية في المملكة العربية السعودية واحدة من أسرع الأسواق نموًا في العالم، ويقدر البنك السعودي للتنمية الاجتماعية أن قيمة السوق حوالي ٣ مليار ريال سعودي ومن المتوقع ان تصل الى ١٠ مليار ريال بحلول عام ٢٠٣٠ ويعود هذا النمو إلى عدة عوامل، من بينها زيادة عدد اللاعبين في المملكة، توسع البنية التحتية الرقمية، والاهتمام بشكل كبير في تنمية قطاع الترفيه التقني من قبل حكومتنا الرشيدة. كما أن اهتمام الحكومة بتطوير قطاع الألعاب الإلكترونية من خلال وضع استراتيجيات وسياسات داعمة يساهم في دفع عجلة النمو بشكل متسارع ومن المتوقع أن يستمر السوق في جذب الاستثمارات المحلية والأجنبية، مما سيعزز من قيمته وحجمه بشكل كبير.</p>
 
