--- a/blog01.html
+++ b/blog01.html
@@ -133,7 +133,7 @@
       <section class="section blog-article" aria-label="blog article">
         <div class="container">
 
-          <h1 class="h1 section-title">‎المملكة تستعد لاستضافة "كأس العالم للرياضات الإلكترونية"</h1>
+          <h1 class="h1 section-title">‎المملكة تستعد لاستضافة كأس العالم للرياضات الإلكترونية</h1>
           <h2 class="h2 section-subtitle" style="color: white;">العنوان الفرعي</h2>
           <p style="color: white;">الجمعة، 29 يونيو 2024 - الكاتب: استوديو البلد</p>
 
