--- a/blog01.html
+++ b/blog01.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -33,43 +33,12 @@
       background-color: #000; /* Optional: to make sure the background is dark */
       font-family: 'Oxanium', sans-serif; /* Use Oxanium font for English */
     }
-    .container {
-      display: flex;
-      flex-direction: row-reverse;
-    }
-    .main-content {
-      flex: 3;
-      padding: 20px;
-    }
-    .sidebar {
-      flex: 1;
-      background-color: #222;
-      padding: 20px;
-    }
-    .sidebar h2 {
-      font-family: 'Amiri', serif; /* Use Amiri font for Arabic */
-      color: #f1c40f;
-    }
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-    }
-    .sidebar ul li {
-      margin-bottom: 10px;
-    }
-    .sidebar ul li a {
-      color: white;
-      text-decoration: none;
-    }
-    .article-header {
-      font-family: 'Amiri', serif; /* Use Amiri font for Arabic */
-    }
     .article-content {
       font-family: 'Amiri', serif; /* Use Amiri font for Arabic */
       direction: rtl; /* Right-to-left text direction */
       text-align: right; /* Right text alignment */
     }
-    .slider-container {
+        .slider-container {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -79,7 +48,7 @@
       width: 100px;
       margin: 0 10px;
     }
-    .share-button {
+        .share-button {
       background-color: #f1c40f;
       border: none;
       padding: 10px 20px;
@@ -87,7 +56,12 @@
       color: black;
       font-size: 16px;
     }
+/*         .rtl-text {
+      direction: rtl;
+      text-align: right; */
+    }
   </style>
+  
 </head>
 
 <body id="top">
@@ -106,27 +80,27 @@
     <div class="header-bottom skewBg" data-header>
       <div class="container">
 
-        <a href="index.html" class="logo">استوديو البلد</a>
+        <a href="index.html" class="logo">Studio Albalad</a>
 
         <nav class="navbar" data-navbar>
           <ul class="navbar-list">
             <li class="navbar-item">
-              <a href="index.html" class="navbar-link skewBg" data-nav-link>الرئيسية</a>
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Home</a>
             </li>
             <li class="navbar-item">
-              <a href="index.html#live" class="navbar-link skewBg" data-nav-link>مباشر</a>
+              <a href="index.html#live" class="navbar-link skewBg" data-nav-link>Live</a>
             </li>
             <li class="navbar-item">
-              <a href="index.html#features" class="navbar-link skewBg" data-nav-link>ميزات</a>
+              <a href="index.html#features" class="navbar-link skewBg" data-nav-link>Features</a>
             </li>
             <li class="navbar-item">
-              <a href="index.html#shop" class="navbar-link skewBg" data-nav-link>الفريق</a>
+              <a href="index.html#shop" class="navbar-link skewBg" data-nav-link>Team</a>
             </li>
             <li class="navbar-item">
-              <a href="blog.html" class="navbar-link skewBg" data-nav-link>المدونة</a>
+              <a href="blog.html" class="navbar-link skewBg" data-nav-link>Blog</a>
             </li>
             <li class="navbar-item">
-              <a href="contact.html" class="navbar-link skewBg" data-nav-link>اتصل بنا</a>
+              <a href="contact.html" class="navbar-link skewBg" data-nav-link>Contact</a>
             </li>
           </ul>
         </nav>
@@ -155,57 +129,47 @@
   </header>
 
   <main>
-    <div class="container">
-      <div class="sidebar">
-        <h2>الأكثر قراءة</h2>
-        <ul>
-          <li><a href="#">عنوان المقالة الأولى...</a></li>
-          <li><a href="#">عنوان المقالة الثانية...</a></li>
-          <li><a href="#">عنوان المقالة الثالثة...</a></li>
-          <li><a href="#">عنوان المقالة الرابعة...</a></li>
-          <li><a href="#">عنوان المقالة الخامسة...</a></li>
-        </ul>
-      </div>
-      <div class="main-content">
-        <article>
-          <section class="section blog-article" aria-label="blog article">
-            <div class="article-header">
-              <h1 class="h1 section-title" style="color: white;">مقالة المدونة 1</h1>
-              <h2 class="h2 section-subtitle" style="color: white;">العنوان الفرعي</h2>
-              <p style="color: white;">الجمعة، 29 يونيو 2024 - الكاتب: استوديو البلد</p>
-            </div>
+    <article>
+      <section class="section blog-article" aria-label="blog article">
+        <div class="container">
 
-            <div class="slider-container">
-              <span style="font-size: 20px;">A</span>
-              <input type="range" min="16" max="24" value="16" class="slider" id="textSizeSlider">
-              <span style="font-size: 30px;">A</span>
-            </div>
+          <h1 class="h1 section-title">‎المملكة تستعد لاستضافة كأس العالم للرياضات الإلكترونية</h1>
+          <h2 class="h2 section-subtitle" style="color: white;">العنوان الفرعي</h2>
+          <p style="color: white;">الجمعة، 29 يونيو 2024 - الكاتب: استوديو البلد</p>
 
-            <button class="share-button" onclick="copyLink()">نسخ الرابط</button>
+          
 
-            <figure class="img-holder" style="--width: 800; --height: 400;">
-              <img src="https://via.placeholder.com/800x400" width="800" height="400" loading="lazy" alt="Blog Article 1" class="img-cover">
-            </figure>
+          <figure class="img-holder" style="--width: 800; --height: 400;">
+            <img src="https://cdn4.premiumread.com/?url=https://makkahnewspaper.com/uploads/images/2024/06/27/1734147.jpeg&q=100&f=jpg" width="800" height="400" loading="lazy" alt="Blog Article 1" class="img-cover">
+          </figure>
 
-            <p class="article-content">لوريم إيبسوم دولار سيت أميت، كونسيكتيتور أديبيسكينج إيليت. بيلينتيسك فريجييت ليبيرو إيو نيكي فيليسيس، إن فوسيبوس كوام أليكوام. كراس فينيناتيس بيبيندوم إينيم، نيك كيرسوس أنتي.</p>
+          <div class="slider-container">
+            <span style="font-size: 20px;">A</span>
+            <input type="range" min="16" max="24" value="16" class="slider" id="textSizeSlider">
+            <span style="font-size: 30px;">A</span>
+          </div>
 
-            <figure class="img-holder" style="--width: 600; --height: 300;">
-              <img src="https://via.placeholder.com/600x300" width="600" height="300" loading="lazy" alt="Placeholder Image" class="img-cover">
-            </figure>
+          <button class="share-button" onclick="copyLink()">شارك</button>
 
-            <p class="article-content">فاسيلوس ألتيكريس ماسا فيل توربيس أولتريسيس، إيجيت إليمنتوم ليكتوس بلانديت. إنتيجر أوت بوروس إيد إيرات لوريت فارياس. فوسك سيد فيليت أ نونك بيبيندوم فولبوتات.</p>
+          <p>يعد سوق الألعاب الإلكترونية في المملكة العربية السعودية واحدة من أسرع الأسواق نموًا في العالم، ويقدر البنك السعودي للتنمية الاجتماعية أن قيمة السوق حوالي ٣ مليار ريال سعودي ومن المتوقع ان تصل الى ١٠ مليار ريال بحلول عام ٢٠٣٠ ويعود هذا النمو إلى عدة عوامل، من بينها زيادة عدد اللاعبين في المملكة، توسع البنية التحتية الرقمية، والاهتمام بشكل كبير في تنمية قطاع الترفيه التقني من قبل حكومتنا الرشيدة. كما أن اهتمام الحكومة بتطوير قطاع الألعاب الإلكترونية من خلال وضع استراتيجيات وسياسات داعمة يساهم في دفع عجلة النمو بشكل متسارع ومن المتوقع أن يستمر السوق في جذب الاستثمارات المحلية والأجنبية، مما سيعزز من قيمته وحجمه بشكل كبير.</p>
 
-            <figure class="img-holder" style="--width: 600; --height: 300;">
-              <img src="https://via.placeholder.com/600x300" width="600" height="300" loading="lazy" alt="Placeholder Image" class="img-cover">
-            </figure>
+          <figure class="img-holder" style="--width: 600; --height: 300;">
+            <img src="https://via.placeholder.com/600x300" width="600" height="300" loading="lazy" alt="Placeholder Image" class="img-cover">
+          </figure>
 
-            <p class="article-content">كورابيتور إيوسمود، ميتوس أوت فيويجات بولفينار، دوي ماسا ديكتوم ليبيرو، نون لوكتوس نيسي نيسل أك فيليت. نام فيتاي فيليس نيك ميتوس ديكتوم إينتردوم. إنتيجر كورسوس، أركو أوت أليكيت فاسيليسيز، ماجنا فيليت بيلينتيسك ليوريم، إيد ساجيتيس لاكوس أورنا أوت أوديو.</p>
+          <p>Phasellus ultricies massa vel turpis ultrices, eget elementum lectus blandit. Integer ut purus id erat laoreet varius. Fusce sed velit a nunc bibendum volutpat.</p>
 
-          </section>
-        </article>
-      </div>
-    </div>
+          <figure class="img-holder" style="--width: 600; --height: 300;">
+            <img src="https://via.placeholder.com/600x300" width="600" height="300" loading="lazy" alt="Placeholder Image" class="img-cover">
+          </figure>
+
+          <p>Curabitur euismod, metus ut feugiat pulvinar, dui massa dictum libero, non luctus nisi nisl ac velit. Nam vitae felis nec metus dictum interdum. Integer cursus, arcu ut aliquet facilisis, magna velit pellentesque lorem, id sagittis lacus urna ut odio.</p>
+
+        </div>
+      </section>
+    </article>
   </main>
+
   <!-- 
     - #FOOTER
   -->
