--- a/blog01.html
+++ b/blog01.html
@@ -154,28 +154,87 @@
           <p>
 يعد سوق الألعاب الإلكترونية في المملكة العربية السعودية واحدة من أسرع الأسواق نموًا في العالم، ويقدر البنك السعودي للتنمية الاجتماعية أن قيمة السوق حوالي ٣ مليار ريال سعودي ومن المتوقع ان تصل الى ١٠ مليار ريال بحلول عام ٢٠٣٠ ويعود هذا النمو إلى عدة عوامل، من بينها زيادة عدد اللاعبين في المملكة، توسع البنية التحتية الرقمية، والاهتمام بشكل كبير في تنمية قطاع الترفيه التقني من قبل حكومتنا الرشيدة. كما أن اهتمام الحكومة بتطوير قطاع الألعاب الإلكترونية من خلال وضع استراتيجيات وسياسات داعمة يساهم في دفع عجلة النمو بشكل متسارع ومن المتوقع أن يستمر السوق في جذب الاستثمارات المحلية والأجنبية، مما سيعزز من قيمته وحجمه بشكل كبير.
 
+          </p>
+
+              <p>
+           <h2 class="h2 section-subtitle" style="color: white;">نسبة إقبال السعوديين على الألعاب الإلكترونية</h2> 
+
 وجود عدد كبير من الشباب في السعودية يعتبر عاملاً مهماً في دعم نمو عدد اللاعبين. تُظهر الإحصائيات الأخيرة للتعداد السكاني أن ٦٣% من السعوديين تحت سن ٣٠ عامًا، مما يعني أن غالبية السكان هم من الفئة العمرية التي تعتبر الأكثر اهتماماً بالألعاب الإلكترونية. حوالي ٦٠% من السكان في السعودية يشاركون في الألعاب الإلكترونية بشكل منتظم، مما يعكس الاهتمام الكبير بهذه الصناعة.  هذا العدد الكبير من الشباب يعزز بشكل كبير سوق الألعاب الإلكترونية، حيث ان الشباب يميلون إلى استكشاف وتجربة الألعاب كوسيلة للترفيه والتواصل الاجتماعي. الألعاب الإلكترونية توفر لهم منصة للتفاعل مع أقرانهم محليًا وعالميًا، مما يزيد من شعبية هذه الألعاب ويعزز من انتشارها.
+   </p>
+    <p>
+              <h2 class="h2 section-subtitle" style="color: white;">                  أهم الصفات التي يقبل عليها اللاعب في الألعاب الإلكترونية
+</h2> 
 
 السعوديون يفضلون الألعاب التي توفر تجارب متعددة اللاعبين بالأخص العاب الإنترنت، حيث يمكنهم التفاعل مع أصدقائهم وتكوين صداقات جديدة. الألعاب الإلكترونية تمثل وسيلة ترفيهية رئيسية للشباب، حيث يقضون ساعات طويلة في اللعب والمنافسة والتواصل مع أقرانهم من خلال هذه الألعاب. على سبيل المثال، ألعاب مثل ببجي و فورتنايت تعد من الألعاب الأكثر شعبية بين الشباب السعوديين، حيث توفر هذه الألعاب تجربة تفاعلية ممتعة تجمع بين الإثارة والتواصل الاجتماعي. ايضاً، الألعاب الرياضية مثل العاب محاكاة كرة القدم فيفا تجذب الكثير من اللاعبين السعوديين الذين يرغبون في محاكاة رياضتهم المفضلة والمنافسة مع أصدقائهم. ألعاب مثل كول اوف دوتي و ماينكرافت أيضاً لها شعبية كبيرة، حيث تتيح للاعبين الانغماس في تجارب متنوعة تتراوح بين ألعاب التصويب من منظور الشخص الأول إلى ألعاب البناء والاستكشاف. علاوة على ذلك، هناك اهتمام متزايد بالألعاب التي تحتوي على قصص مثل انشارتيد حيث تتيح للاعبين الانغماس في عالم القصة‫.‬
 
+   </p>
+
+
+    <p>
+
+ما استراتيجية الألعاب الإلكترونية التي تهتم بها شركات الألعاب؟
+
 شركات الألعاب العالمية والمحلية تركز بشكل خاص على تطوير الألعاب التي تلبي احتياجات وتفضيلات اللاعبين، مع التأكيد على تقديم محتوى ذو جودة عالية. عند اختيار لعبة لتطويرها، تهتم شركات تطوير الألعاب بمجموعة من العوامل الأساسية التي تساعدها في تحديد نوع اللعبة التي ستعمل عليها. هذه العوامل تشمل: تحليل السوق والجمهور المستهدف، الاتجاهات الحالية في انواع الالعاب المرغوبة، التقنية الحديثة المتاحة لتصميم وتطوير اللعبة، النموذج الربحي المقترح، الالعاب المنافسة والقيمة المضافة للعبة المقترحة‫.‬ شركات تطوير الألعاب تعتمد على مزيج من الاستراتيجيات من بينها الأبحاث السوقية، التحليل الفني، الابتكار الإبداعي، واستراتيجيات الربح لاتخاذ قرار واضح حول نوع اللعبة التي ستطورها.‬
+   </p>
+          <p>
+
+ما أهم المبادرات لصناعة محتوى محلي لألعاب الفيديو وتصديره خلال السنوات المقبلة؟
 
  الاتحاد السعودي للرياضات الإلكترونية والهيئة السعودية للألعاب والرياضات الإلكترونية والجهات الحكومية والخاصة لها دور رئيسي في دعم وتطوير صناعة الألعاب المحلية من خلال مبادرات وبرامج متنوعة. واحدة من أهم هذه المبادرات هي إنشاء مراكز وحاضنات لدعم الشركات الناشئة في مجال الألعاب مثل مراكز كوود التابعة لوزارة الاتصالات وتقنية المعلومات التي تقدم الدعم المادي، التقني، والاستشاري للمهتمين بصناعة الألعاب الإلكترونية. بالإضافة إلى ذلك، هناك برامج تدريب وتطوير للمواهب الشابة مقدمة من أكاديمية طويق وايضاً مؤسسة مسك تهدف إلى تنمية مهاراتهم في تصميم وتطوير الألعاب. تشمل المبادرات أيضًا تنظيم مسابقات وأحداث لتعزيز الابتكار وتشجيع الإبداع في صناعة الألعاب. كما يتم التركيز على إنشاء محتوى محلي بالغة العربية لمفاهيم تصميم وتطوير الألعاب الإلكترونية مما سيساهم في تطوير الالعاب المحلية، مما يساهم في تعزيز الهوية الوطنية وتصدير هذا المحتوى إلى الأسواق العالمية.
+   </p>
+                <p>
+
+            كيف ترى تطوير الألعاب محلياً؟
 
 الشباب السعودي ليسوا فقط مستهلكين للألعاب، بل هناك اهتمام متزايد بتطوير وتصميم الألعاب. هذا الشغف يظهر من خلال المبادرات التعليمية التي تهدف إلى تنمية المهارات لدى الشباب. على سبيل المثال، هناك برامج تعليمية وتدريبية في الجامعات والمعاهد السعودية تركز على تطوير الألعاب وتصميمها، مما يساعد في تأهيل جيل جديد من المطورين والمصممين. حالياً هناك جهود مستمرة لإنشاء بيئة تدعم الابتكار والإبداع في هذا المجال، بما في ذلك توفير بنية تحتية قوية وتقديم حوافز للشركات الناشئة السعودية في هذا المجال الواعد. يتزايد عدد البرامج التدريبية والتعليمية التي تهدف إلى تأهيل الكفاءات المحلية في مجالات التصميم والتطوير. كما أن الشراكات مع الشركات العالمية توفر فرصًا لنقل المعرفة إلى السوق المحلي. بفضل هذه الجهود، تتوقع السعودية أن تصبح مركزًا إقليميًا رائدًا في صناعة الألعاب الإلكترونية.
+   </p>
+
+
+
+
+
+
+
+    <p>
+
+ماهي تجاربنا في صناعة الألعاب الإلكترونية؟
 
 في السنوات الأخيرة، بدأت السعودية تحقق تقدمًا ملحوظًا في صناعة الألعاب الإلكترونية، مع ظهور العديد من الشركات المحلية التي تطور ألعابًا مبتكرة. من بين هذه التجارب الناجحة، هناك ألعاب حصلت على جوائز دولية وإشادة من النقاد، مما يعكس جودة وإبداع المطورين السعوديين. تجربة شركة مانجا للإنتاج، التابعة لمؤسسة محمد بن سلمان "مسك"، وتعتبر من الأمثلة البارزة، حيث قامت بإنتاج ألعاب مثل لعبة "‬السنافر: عالم الأحلام‫" ولعبة ‫"‬مغامرات الفضاء جريندايزر: وليمة الذئاب‫"‬ والتي تحتوي على محتوى بمستوى عالمي بأيدي سعودية. كما أن هناك العديد من المبادرات الأكاديمية التي توفر برامج تعليمية في تصميم وتطوير الألعاب، مما يسهم في تأهيل جيل جديد من المطورين المحليين. هذا التوجه الإيجابي يعزز من مكانة السعودية في صناعة الألعاب الإلكترونية على المستوى العالمي.‬‬‬
+   </p>
+
+          <p>
+      ما أهم احتياجات السوق من الألعاب الإلكترونية؟
 
 أهم احتياجات السوق السعودي من الألعاب الإلكترونية تشمل تطوير المزيد من الألعاب التي تحتوي على محتوى محلي يناسب الثقافة والتقاليد السعودية. هناك حاجة أيضًا إلى منصات تدريبية وتطويرية تساعد المواهب الشابة على اكتساب المهارات اللازمة في تصميم وتطوير الألعاب. البنية التحتية التقنية تحتاج إلى تحسينات مستمرة لدعم الألعاب المتقدمة التي تتطلب قدرات معالجة عالية وسرعات إنترنت فائقة. كما أن السوق بحاجة إلى تنويع الفئات العمرية المستهدفة، بحيث تشمل الألعاب تعليمية وترفيهية للأطفال والكبار على حد سواء. دعم الشركات الناشئة وتقديم حوافز للاستثمار في هذا القطاع يعتبر أيضًا من الضرورات لتنمية الصناعة بشكل مستدام.
 
+   </p>
+                <p>
+            ماذا عن مسألة التطوير والمطورين هل لدينا مطورين؟ الشركات، المواهب السعودية؟
+
 نعم، السعودية تمتلك مجموعة متنامية من المطورين المحليين والشركات الناشئة التي تعمل في مجال تطوير الألعاب الإلكترونية مثل شركة "رمال"، "يومكس ستوديو"، و "ستوديو البلد"‫.‬ ومن أشهر العاب الويب التي تم اطلاقها محلياً من قبل شركة رمال هي لعبة "كملنا" وتستقطب أكثر من ٢٠٠ ألف لاعب يومياً ولديها أكثر من ٦ ملايين مشترك. بالإضافة إلى وجود الشركات المحلية الناشئة، تستضيف المملكة فعاليات ومسابقات تحفز الشباب على الابتكار والإبداع في مجال تصميم وتطوير الألعاب. برنامج "رواد الألعاب" التابع لوزارة الاتصالات وتقنية المعلومات قام بمساعدة رواد الأعمال الوطنيين على إطلاق شركات ألعاب مستقلة خاصة بهم ودعمهم بشكل مباشر لتصميم وتطوير العاب بجودة عالية.‬
+
+   </p>
+                      <p>
+                  ختاما ما أهم النقاط التي تساهم في سوق الألعاب الإلكترونية في السعودية؟
 
 من أهم النقاط التي تساهم في نمو سوق الألعاب الإلكترونية في السعودية هو الدعم الحكومي الكبير والمتزايد لهذه الصناعة. الحكومة تعمل على توفير البنية التحتية اللازمة وتقديم حوافز استثمارية لجذب الشركات العالمية والمحلية.
 ايضاً، استحواذ صندوق الاستثمارات العامة على حصص مختلفة لشراكات تصميم وتطوير الألعاب العالمية، مثل الاستحواذ بقيمة مليار دولار في مجموعة Embracer للألعاب، يعد من الاستثمارات الاستراتيجية في تنمية القطاع محلياً ويعزز من مكانة السعودية كمركز رئيسي لصناعة الألعاب الإلكترونية. تنظيم البطولات مثل بطولة كأس العالم للرياضات الإلكترونية والفعاليات المحلية والدولية والمبادرات الأكاديمية والتدريبية تساهم في تنمية المهارات والكوادر المحلية في هذا المجال الواعد.
 
+   </p>
+
+
+    <p>
+كيف ممكن تنعكس بطولة كأس العالم للرياضات الإلكترونية وإقامتها في السعودية؟
+
 إقامة بطولة كأس العالم للرياضات الإلكترونية في السعودية سيكون لها تأثيرات إيجابية كبيرة على الاقتصاد المحلي وقطاع الألعاب الإلكترونية بشكل خاص. كأس العالم للرياضات الإلكترونية هي المنافسة الأقوى والأكبر عالميًا بجوائز تقدر قيمتها ب٢٢٥ مليون ريال سعودي، وسوف تمتد على مدار ثمانية أسابيع، يتنافس فيها اكثر من ١٥٠٠ محترف في أفضل فرق الرياضات الإلكترونية في العالم على ألقاب العاب شهيرة مثل دوتا ٢ وليق اوف ليجيندز وهذه الألعاب ليست فقط مجرد العاب للتسلية، بل هي رياضات تعتمد على المهارة والاستراتيجية والتفكير السريع. هذا الحدث سيجذب الآلاف من اللاعبين والمشجعين من مختلف أنحاء العالم، مما يعزز من السياحة المحلية وتنمية القطاع بشكل كبير. بالإضافة إلى ذلك، سيعزز هذا الحدث من مكانة السعودية كمركز عالمي للرياضات الإلكترونية، ويعزز من سمعة المملكة كداعم رئيسي لهذه الرياضة المتنامية. كما سوف يساهم في جذب الاستثمارات وتعزيز الشراكات مع الشركات العالمية في مجال الألعاب الإلكترونية وتسليط الضوء على المواهب المحلية وتعزيز مهاراتهم من خلال التفاعل مع أفضل اللاعبين في العالم وفي السعودية. 
+   </p>
+
+          <p>
+
+ما أهمية هذا الحدث عالميا؟
 
 بطولة كأس العالم للرياضات الإلكترونية تعتبر حدثًا عالميًا يجذب اهتمام وسائل الإعلام والمشجعين من جميع أنحاء العالم. هذا الحدث يعزز من التفاعل بين مختلف الثقافات، حيث يجتمع اللاعبون من مختلف الدول للتنافس في جو رياضي وترفيهي ممتع. تسعى المملكة من خلال استضافة هذه البطولة إلى تحقيق مجموعة من الأهداف الرئيسية. أولاً، تهدف إلى تعزيز مكانتها كوجهة عالمية للرياضات الإلكترونية. ثانياً، تهدف إلى تحفيز الشباب على المشاركة في هذا المجال وتنمية مهاراتهم. ثالثاً، تهدف إلى تعزيز السياحة الرياضية وجذب الزوار من جميع أنحاء العالم. تتوافق هذه الأهداف مع رؤية المملكة ٢٠٣٠ التي تركز على تنويع الاقتصاد وتعزيز التنمية في مختلف القطاعات. الأهمية العالمية للبطولة تكمن أيضًا في قدرتها على رفع مستوى الوعي برياضة الألعاب الإلكترونية كصناعة احترافية ومتنامية. البطولات من هذا النوع تساهم في تعزيز الابتكار والتطور في هذا المجال، حيث يتم تقديم أحدث التقنيات والألعاب خلال الفعاليات. كما توفر هذه البطولات فرصة للشركات والمطورين لعرض منتجاتهم والتفاعل مع جمهور واسع، مما يعزز من نمو الصناعة على المستوى المحلي والعالمي. إقامتها في المملكة العربية السعودية يعكس التزام المملكة بتطوير هذا القطاع وجعل المملكة وجهة رئيسية للأحداث الرياضية العالمية.
+
 
           </p>
 
