--- a/blog01.html
+++ b/blog01.html
@@ -151,20 +151,20 @@
 
           <button class="share-button" onclick="copyLink()">شارك</button>
 
-          <p>
+          <p dir="rtl">
 يعد سوق الألعاب الإلكترونية في المملكة العربية السعودية واحدة من أسرع الأسواق نموًا في العالم، ويقدر البنك السعودي للتنمية الاجتماعية أن قيمة السوق حوالي ٣ مليار ريال سعودي ومن المتوقع ان تصل الى ١٠ مليار ريال بحلول عام ٢٠٣٠ ويعود هذا النمو إلى عدة عوامل، من بينها زيادة عدد اللاعبين في المملكة، توسع البنية التحتية الرقمية، والاهتمام بشكل كبير في تنمية قطاع الترفيه التقني من قبل حكومتنا الرشيدة. كما أن اهتمام الحكومة بتطوير قطاع الألعاب الإلكترونية من خلال وضع استراتيجيات وسياسات داعمة يساهم في دفع عجلة النمو بشكل متسارع ومن المتوقع أن يستمر السوق في جذب الاستثمارات المحلية والأجنبية، مما سيعزز من قيمته وحجمه بشكل كبير.
 
           </p>
 <br>
           <font size="+2">نسبة إقبال السعوديين على الألعاب الإلكترونية</font>
           <br>
-              <p>
+              <p dir="rtl">
 <!--            <h2 class="h2 section-subtitle" style="color: white;">نسبة إقبال السعوديين على الألعاب الإلكترونية</h2>  -->
 
 وجود عدد كبير من الشباب في السعودية يعتبر عاملاً مهماً في دعم نمو عدد اللاعبين. تُظهر الإحصائيات الأخيرة للتعداد السكاني أن ٦٣% من السعوديين تحت سن ٣٠ عامًا، مما يعني أن غالبية السكان هم من الفئة العمرية التي تعتبر الأكثر اهتماماً بالألعاب الإلكترونية. حوالي ٦٠% من السكان في السعودية يشاركون في الألعاب الإلكترونية بشكل منتظم، مما يعكس الاهتمام الكبير بهذه الصناعة.  هذا العدد الكبير من الشباب يعزز بشكل كبير سوق الألعاب الإلكترونية، حيث ان الشباب يميلون إلى استكشاف وتجربة الألعاب كوسيلة للترفيه والتواصل الاجتماعي. الألعاب الإلكترونية توفر لهم منصة للتفاعل مع أقرانهم محليًا وعالميًا، مما يزيد من شعبية هذه الألعاب ويعزز من انتشارها.
    </p>
           <br>
-    <p>
+    <p dir="rtl">
               <h2 class="h2 section-subtitle" style="color: white;">                  أهم الصفات التي يقبل عليها اللاعب في الألعاب الإلكترونية
 </h2> 
 
