--- a/blog01.html
+++ b/blog01.html
@@ -134,8 +134,10 @@
         <div class="container">
 
           <h1 class="h1 section-title">‎المملكة تستعد لاستضافة كأس العالم للرياضات الإلكترونية</h1>
-          <h2 class="h2 section-subtitle" style="color: white;">العنوان الفرعي</h2>
-          <p style="color: white;">الجمعة، 29 يونيو 2024 - الكاتب: استوديو البلد</p>
+<!--           <h2 class="h2 section-subtitle" style="color: white;">العنوان الفرعي</h2> -->
+              <br>
+              <br>
+          <p dir="rtl" style="color: white;">الجمعة، 29 يونيو 2024 - الكاتب: استوديو البلد</p>
 
           
 
